<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ card_menu.xml
  ~ Created by G.Capelli on 8/6/2016
  ~ This file is part of BasicAirData GPS Logger
  ~
  ~ Copyright (C) 2011 BasicAirData
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.basicairdata.graziano.gpslogger.GPSActivity">
    <item
        android:id="@+id/cardmenu_view"
        android:icon="@drawable/ic_visibility_24dp"
        android:visible="true"
        android:title="@string/card_menu_view_selector" />
    <item
        android:id="@+id/cardmenu_edit"
        android:icon="@drawable/ic_edit_24"
        android:visible="true"
        android:title="@string/card_menu_edit" />
    <item
        android:id="@+id/cardmenu_share"
        android:icon="@drawable/ic_share_24dp"
        android:visible="true"
        android:title="@string/card_menu_share" />
    <item
        android:id="@+id/cardmenu_export"
        android:icon="@drawable/ic_publish_24dp"
        android:visible="true"
        android:title="@string/card_menu_export" />
    <item
        android:id="@+id/cardmenu_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:visible="true"
        android:title="@string/card_menu_delete" />
</menu>