<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ main_menu.xml
  ~ Created by G.Capelli (BasicAirData) on 8/6/2016
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_menu"
    tools:context="eu.basicairdata.graziano.gpslogger.GPSActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shutdown"
        android:orderInCategory="102"
        android:title="@string/menu_shutdown"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_track_finished"
        android:visible="false"
        android:orderInCategory="105"
        android:icon="@mipmap/ic_done_white_24dp"
        android:title="@string/menu_track_finished"
        app:showAsAction="ifRoom" />
</menu>
