<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_track_type_dialog.xml
  ~ Created by G.Capelli on 18/10/2022
  ~ This file is part of BasicAirData GPS Logger
  ~
  ~ Copyright (C) 2011 BasicAirData
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:id="@+id/tracktype_main_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/category_fitness"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_fitness"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/category_water_snow"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_water"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_snow"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/category_wheel"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_wheel"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_mobility"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/category_air"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_air"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/category_other"
                android:textSize="13sp"/>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_other"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tracktype_main_linearlayout_cat_other_sports"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>